# qPiCtuRes

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: WellResult-2026-06-09-15261.csv  WellResult-2026-06-10-132710.csv  WellResult-2026-06-16-131422.csv  sc_well_table_results-2026-06-10-092019.csv
data/ex1/: WellResult-2026-06-09-14570.csv
data/ex2/: WellResult-2026-06-09-152220.csv
qpictures/: __init__.py  analysis.py  cli.py  io.py  plot.py
